Ajout de condition pour l'idPartenaire de getUserById